--- a/index.html
+++ b/index.html
@@ -21,6 +21,13 @@
             <li class="punkt pl">КОНТАКТЫ</li> 
           </ul>
         </div>
+
+        </div>
+        <div class="block-1">
+          <div class="bl-1"></div>
+          <div class="bl-1"></div>
+          <div class="bl-1"></div>
+        </div>
       </div>
     </div>
   </body>
